--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes/form-gestionar-fuentes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/form-gestionar-fuentes/form-gestionar-fuentes.component.html
@@ -63,7 +63,8 @@
         </div>
         <div class="col-md-12">
           <p>
-            <strong>Valor total del proyecto:</strong>
+            <strong *ngIf="this.esNovedad != true">Valor total del proyecto:</strong>
+            <strong *ngIf="this.esNovedad == true">Valor de adición al proyecto:</strong>
             {{ valorAportante | currency: '':'symbol':'3.0' }}
           </p>
         </div>
@@ -172,7 +173,7 @@
                           onKeyPress="if(this.value.length>=this.maxLength) return false;"
                           oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'left', allowNegative: false }"
-                          
+
                           formControlName="valorSolicitado"
                         />
                       </mat-form-field>
