--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/detalle-disponibilidad-presupuestal/detalle-disponibilidad-presupuestal.component.html
@@ -132,10 +132,11 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content align="left">
-            <div [innerHtml]="this.objeto"></div>
+            <div [innerHtml]="this.objeto" *ngIf="novedadContractualId == 0"></div>
+            <div [innerHtml]="this.objetoNovedad" *ngIf="novedadContractualId > 0"></div>
         </mat-card-content>
     </mat-card>
-    <mat-card class="shipping-card mainGris" *ngIf="observaciones?.length>0 && (estadoSolicitudCodigo === '6' || estadoSolicitudCodigo === '2' || estadoSolicitudCodigo === '3')">
+    <mat-card class="shipping-card mainGris" *ngIf="novedadContractualId == 0 && observaciones?.length>0 && (estadoSolicitudCodigo === '6' || estadoSolicitudCodigo === '2' || estadoSolicitudCodigo === '3')">
         <mat-card-header class="header-card">
             <mat-card-title class="header-card--text textoGris">
                 Observaciones
@@ -145,4 +146,14 @@
             <div [innerHtml]="ob.observacion"></div>
         </mat-card-content>
     </mat-card>
+    <mat-card class="shipping-card mainGris" *ngIf="novedadContractualId > 0 && observacionesNovedad?.length>0 && (estadoSolicitudCodigo === '6' || estadoSolicitudCodigo === '2' || estadoSolicitudCodigo === '3')">
+      <mat-card-header class="header-card">
+          <mat-card-title class="header-card--text textoGris">
+              Observaciones
+          </mat-card-title>
+      </mat-card-header>
+      <mat-card-content align="left" *ngFor="let ob of observacionesNovedad">
+          <div [innerHtml]="ob.observacion"></div>
+      </mat-card-content>
+  </mat-card>
 </div>
