--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
@@ -14,7 +14,7 @@
                                 <p><strong>Fuente: </strong> {{ aportante.get( 'fuente' ).value.nombre }} </p>
                             </div>
                             <ng-container *ngIf="aportante.get( 'listaCuentaBancaria' ).value.length > 1; else elseTemplate">
-                                <p><b>Nombre de la Cuenta: </b> {{ firstLetterUpperCase( aportante.get( 'cuentaBancariaId' ).value.nombreCuentaBanco ) }} </p>
+                                <p><b>Nombre de la Cuenta: </b> <span *ngIf="aportante.get( 'cuentaBancariaId' ).value">{{ firstLetterUpperCase( aportante.get( 'cuentaBancariaId' ).value.nombreCuentaBanco ) }}</span> </p>
                                 <div class="animatedDown" *ngIf="aportante.get( 'cuentaBancariaId' ).value !== null" style="margin-left: .5em;">
                                     <p><strong>Número de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }} </p>
                                     <p><strong>Banco: </strong> {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }} </p>
