--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-informe-final-rlc/tabla-informe-final-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-informe-final-rlc/tabla-informe-final-rlc.component.html
@@ -30,7 +30,7 @@
                 <button mat-raised-button
                         color="accent"
                         class="btn-table"
-                        [routerLink]="[ '/registrarLiquidacionContrato/detalleInformeFinal', element.proyectoId, element.contratacionProyectoId ]">
+                        [routerLink]="[ '/registrarLiquidacionContrato/detalleInformeFinal', element.proyectoId, element.contratacionId ]">
                         Ver detalle
             </button>
             </td>
