--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-en-validacion/tabla-en-validacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-en-validacion/tabla-en-validacion.component.html
@@ -40,7 +40,7 @@
             <td mat-cell *matCellDef="let element">
                 <button *ngIf="!element.estadoRegistro" mat-raised-button color="accent" class="btn-table btn-table--sm"
                 (click)="validar(element.id, element.esNovedad, element.novedadId)">Validar</button>
-                <button *ngIf="element.estadoRegistro" mat-raised-button color="accent" class="btn-table btn-table--sm"
+                <button *ngIf="element.estadoRegistro" mat-raised-button color="accent" class="btn-table"
                 (click)="validar(element.id, element.esNovedad, element.novedadId)">Ver detalle/Editar</button>
             </td>
         </ng-container>
