--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/manejo-anticipo-verificar-requisitos/manejo-anticipo-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/manejo-anticipo-verificar-requisitos/manejo-anticipo-verificar-requisitos.component.html
@@ -124,7 +124,7 @@
 <div align="center" *ngIf="this.observacionesCompleted === true">
   <mat-card class="border" style="margin-top: 20px">
     <mat-card-header class="header-card">
-      <mat-card-title class="header-card--text grayTitle"> observaciones al manejo del anticipo </mat-card-title>
+      <mat-card-title class="header-card--text grayTitle"> Observaciones al manejo del anticipo </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
       <p>
