--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/planes-programas-verificar-requisitos/planes-programas-verificar-requisitos.component.html
@@ -165,7 +165,7 @@
 <div align="center" *ngIf="this.observacionesCompleted === true">
   <mat-card class="border" style="margin-top: 20px">
     <mat-card-header class="header-card">
-      <mat-card-title class="header-card--text grayTitle"> observaciones a los planes y programas </mat-card-title>
+      <mat-card-title class="header-card--text grayTitle"> Observaciones a los planes y programas </mat-card-title>
     </mat-card-header>
     <mat-card-content align="left">
       <p>
