--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-detalle-giro-gog/accordion-detalle-giro-gog.component.html
@@ -37,7 +37,7 @@
             </mat-expansion-panel>
         </mat-accordion>
     -->
-    <!--    
+    <!--
         Para el flujo nuevo de detalles de giro se utiliza el objeto proyecto recibido de form-generar-orden-giro.component.html
         el cual se hace un recorrido de proyecto.fases para el coontinuar con el flujo de descuentos direccion tecnica y tercero de causacion por fases
     -->
@@ -49,7 +49,7 @@
                         Descuentos Dirección Técnica - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-    
+
                 <app-desc-dir-tecnica-gog   [solicitudPago]="solicitudPago"
                                             [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
                                             [solicitudPagoFase]="solicitudPagoFase"
@@ -65,9 +65,10 @@
                         Tercero de causación  - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-    
+
                 <app-tercero-causacion-gog  [solicitudPago]="solicitudPago"
                                             [esVerDetalle]="esVerDetalle"
+                                            [contratacionProyectoId]="contratacionProyectoId"
                                             [solicitudPagoFase]="solicitudPagoFase"
                                             [esPreconstruccion]="solicitudPagoFase.esPreconstruccion"
                                             (estadoSemaforo)="solicitudPagoFase.estadoSemaforoCausacion = $event; checkSemaforoProyecto()">
