--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -12,17 +12,17 @@
 
         <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
             <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
-          
+
                 <ng-container matColumnDef="drp">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> DRP </th>
                   <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{ i + 1 }}</b> </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="numeroDrp">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Número DRP </th>
                   <td mat-cell *matCellDef="let element; index as i" align="center"> {{ element.numeroDrp }} </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="nombreAportante">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Nombre del aportante </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
@@ -31,7 +31,7 @@
                     </div>
                   </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="porcentaje">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Porcentaje de participación </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
@@ -40,7 +40,7 @@
                     </div>
                   </td>
                 </ng-container>
-            
+
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
@@ -61,17 +61,17 @@
 
         <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
             <table mat-table [dataSource]="dataSourceFuentes" matSort style="width: 90%">
-          
+
                 <ng-container matColumnDef="nombre">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Nombre del aportante </th>
                   <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreAportante }} </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="fuenteRecursos">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fuente de recursos </th>
                   <td mat-cell *matCellDef="let element" align="center"> {{ element.fuenteRecursos }} </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="saldoActualRecursos">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo actual fuente de recursos </th>
                     <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoActual | currency: '':'symbol-narrow':'.0-0' }} </td>
@@ -81,7 +81,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo fuente de recursos afectado por ordenado a girar </th>
                     <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoAfectado | currency: '':'symbol-narrow':'.0-0' }} </td>
                 </ng-container>
-            
+
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsFuentes"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumnsFuentes;"></tr>
             </table>
@@ -179,12 +179,12 @@
 
             <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
-              
+
                     <ng-container matColumnDef="fechaRevision">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                       <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
                     </ng-container>
-              
+
                     <ng-container matColumnDef="responsable">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
                         <td mat-cell *matCellDef="let element" align="center" class="color-text">
@@ -195,14 +195,14 @@
                             </div>
                         </td>
                     </ng-container>
-              
+
                     <ng-container matColumnDef="historial">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
                       <td mat-cell *matCellDef="let element" align="center" class="color-text">
                           <section [innerHTML]="element.observacion"></section>
                       </td>
                     </ng-container>
-                
+
                   <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
                 </table>
@@ -218,7 +218,7 @@
                     Descuentos Dirección Técnica - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
-    
+
             <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
                                                 [esRegistroNuevo]="esRegistroNuevo"
                                                 [solicitudPago]="solicitudPago"
@@ -226,19 +226,20 @@
                                                 [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
             </app-descuentos-direccion-tecnica>
         </mat-expansion-panel>
-    
+
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
                     Tercero de causación - {{ solicitudPagoFase.esPreconstruccion === true ? 'Fase 1' : 'Fase 2' }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
-    
+
 
             <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
                                     [esRegistroNuevo]="esRegistroNuevo"
                                     [solicitudPago]="solicitudPago"
                                     [solicitudPagoFase]="solicitudPagoFase"
+                                    [contratacionProyectoId]="proyecto.contratacionProyectoId"
                                     [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
             </app-tercero-causacion>
         </mat-expansion-panel>
