--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -27,7 +27,7 @@
 
         <div class="d-flex justify-content-center mt-1em">
             <p>Número de DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].numeroDdp }} </b></p>
-            <p style="margin-left: 2em;">Valor del DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].valorSolicitud | currency:'':'symbol-narrow':'.0-0' }} </b></p>
+            <p style="margin-left: 2em;">Valor del DDP: <b> {{ valorDelDDP | currency:'':'symbol-narrow':'.0-0' }} </b></p>
         </div>
 
         <!-- <div class="d-flex justify-content-center table-responsive tabla-gris">
