--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -11,15 +11,15 @@
                     <p><strong>Código de negocio SIFI para radicación:</strong> 357233</p>
                     <div *ngIf="solicitudPago.tipoSolicitudCodigo !== listaTipoSolicitud.expensas && solicitudPago.tipoSolicitudCodigo !== listaTipoSolicitud.otrosCostos">
                         <p><strong>Tipo de contrato:</strong> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </p>
-                        <p><strong>Valor de la factura:</strong> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </p>
+                        <p><strong>Valor de la factura:</strong> {{ this.solicitudPago.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
                     </div>
                     <div *ngIf="solicitudPago.tipoSolicitudCodigo === listaTipoSolicitud.expensas">
                         <p><b>Llave MEN: </b>  </p>
-                        <p><strong>Valor de la factura:</strong> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </p>
+                        <p><strong>Valor de la factura:</strong> {{ this.solicitudPago.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
                     </div>
                     <div *ngIf="solicitudPago.tipoSolicitudCodigo === listaTipoSolicitud.otrosCostos">
                         <p><strong>Tipo de contrato:</strong> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </p>
-                        <p><strong>Valor de la factura:</strong> {{ solicitudPago.solicitudPagoOtrosCostosServicios[ 0 ].valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
+                        <p><strong>Valor de la factura:</strong> {{ this.solicitudPago.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
                     </div>
                 </mat-card-content>
             </mat-card>
