bugs plantilla odg

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/plantilla/plantilla.component.html
@@ -178,7 +178,7 @@
           <td style="border: solid 1px #000">{{ data.tipoCuenta }}</td>
           <td style="border: solid 1px #000">{{ data.codigoSifi }}</td>
           <td style="border: solid 1px #000">{{ data.numeroDdp }}</td>
-          <td style="border: solid 1px #000">{{ data.identificacionTercero }}</td>
+          <td style="border: solid 1px #000">{{ data.terceroCausasionIdentificacion }}</td>
           <td style="border: solid 1px #000">{{ data.terceroCausasionNombre }}</td>
           <td style="border: solid 1px #000">{{ data.numerofactura }}</td>
           <td style="border: solid 1px #000">{{ data.institucionEducativa }}</td>
