--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -97,18 +97,18 @@
             ></app-form-tercero-giro-gog>
         </mat-expansion-panel>
     </mat-accordion>
-    <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sub-expansion">
+            <mat-panel-title class="expansion-style--title">
                 Porcentajes de participación
             </mat-panel-title>
         </mat-expansion-panel-header>
         
         <app-tabla-porcntj-partic-gog *ngIf="solicitudPago.tablaPorcentajeParticipacion !== undefined && solicitudPago.tablaPorcentajeParticipacion.length > 0" [tablaPorcentajeParticipacion]="solicitudPago.tablaPorcentajeParticipacion"></app-tabla-porcntj-partic-gog>
     </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title sub-expansion">
+            <mat-panel-title class="expansion-style--title">
                 Información fuente de recursos
             </mat-panel-title>
         </mat-expansion-panel-header>
