--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -64,7 +64,7 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforos.acordeonEstrategiaPago">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle ? '' : estadoSemaforos.acordeonEstrategiaPago">
                     Estrategia de pagos
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -89,7 +89,7 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforos.acordeonObservacion">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle ? '' : estadoSemaforos.acordeonObservacion">
                     Observaciones
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -99,7 +99,7 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforos.acordeonSoporteOrdenGiro">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle ? '' : estadoSemaforos.acordeonSoporteOrdenGiro">
                     Soporte orden de giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
