--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
@@ -224,6 +224,7 @@
                     <p><strong>Fecha de Radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
                     <p><strong>Número de radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera !== undefined ? contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera : '' }} </p>
                     <p><strong>Fecha de asignación:</strong> {{ contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
+                    <p><strong>URL con soporte:</strong> {{ contrato.solicitudPagoOnly.urlSoporteFinanciera }} </p>
                 </mat-card-content>
             </mat-card>
 
