informacion general Información fuente de recursos y Porcentajes de participación

--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -1,14 +1,12 @@
 <mat-accordion>
-    <mat-expansion-panel class="expansion-style sub-expansion">
+    <!-- <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
                 Porcentajes de participación
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <!--
-            Tabla porecntajes de participacion de los aportantes por DRP
-        -->
+       
 
         <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
             <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
@@ -46,18 +44,15 @@
             </table>
         </section>
 
-    </mat-expansion-panel>
+    </mat-expansion-panel> -->
 
-    <mat-expansion-panel class="expansion-style sub-expansion">
+    <!-- <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
                 Información fuente de recursos
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <!--
-            Tabla fuentes de recursos
-        -->
 
         <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
             <table mat-table [dataSource]="dataSourceFuentes" matSort style="width: 90%">
@@ -87,7 +82,7 @@
             </table>
         </section>
 
-    </mat-expansion-panel>
+    </mat-expansion-panel> -->
 
     <!--
     <mat-expansion-panel class="expansion-style sub-expansion">
